tests/result_compile_failed/when_ok_message_should_fail_to_compile.rs
use macrofied_toolbox::result;

fn main() {
    let value = result! {
        @ok     "This will fail: {}", 42
        @error return
    };

    assert_eq!(42, value);
}